Fixed spacing issue on mobile nav bar

--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -95,12 +95,12 @@
     color: rgba(255, 255, 255, 0.82);
     text-shadow: 0px 0px 5px #ffffffa6;
     font-size: 1.2rem;
-    left: 99.5%;
+    left: 99.4%;
   }
 
   .dropdown-flex .link3,
   .dropdown-flex .link4 {
-    left: 98.6%;
+    left: 98.5%;
   }
 
   .circle {
@@ -129,6 +129,17 @@
     width: 40px;
     position: relative;
     left: 100%;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .dropdown-flex a {
+    left: 99%;
+  }
+
+  .dropdown-flex .link3,
+  .dropdown-flex .link4 {
+    left: 96.5%;
   }
 }
 
